--- a/package.json
+++ b/package.json
@@ -1,19 +1,35 @@
 {
   "name": "Potato-Bot",
   "version": "1.0.0",
-  "description": "",
+  "description": "Add the bot to your discord server:",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "author": "Volt64bolt",
   "license": "ISC",
   "dependencies": {
     "cheerio": "^1.0.0-rc.3",
     "cron": "^1.8.2",
-    "discord.js": "^12.4.1",
+    "discord.js": "^12.5.3",
+    "dotenv": "^10.0.0",
     "node-cron": "^2.0.3",
     "request": "^2.88.2",
     "shell": "^0.8.4"
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/volt64bolt/PotatoBot.git"
+  },
+  "keywords": [],
+  "bugs": {
+    "url": "https://github.com/volt64bolt/PotatoBot/issues"
+  },
+  "homepage": "https://github.com/volt64bolt/PotatoBot#readme",
+  "engines": {
+    "node": "14.16.0",
+    "npm": "*"
   }
 }
